; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/ftp/extr_ftp.c_ftp_read_file.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/ftp/extr_ftp.c_ftp_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@E_FTP_RESULT_CONTINUE = common dso_local global i32 0, align 4
@ftp_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@FR_OK = common dso_local global i64 0, align 8
@E_FTP_RESULT_FAILED = common dso_local global i32 0, align 4
@E_FTP_RESULT_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i64*)* @ftp_read_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftp_read_file(i8* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %9 = load i32, i32* @E_FTP_RESULT_CONTINUE, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64*, i64** %6, align 8
  %13 = bitcast i64* %12 to i32*
  %14 = call i64 @f_read(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ftp_data, i32 0, i32 0), i8* %10, i64 %11, i32* %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i64, i64* @FR_OK, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = call i32 (...) @ftp_close_files()
  %20 = load i32, i32* @E_FTP_RESULT_FAILED, align 4
  store i32 %20, i32* %7, align 4
  %21 = load i64*, i64** %6, align 8
  store i64 0, i64* %21, align 8
  br label %31

22:                                               ; preds = %3
  %23 = load i64*, i64** %6, align 8
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* %5, align 8
  %26 = icmp slt i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %22
  %28 = call i32 (...) @ftp_close_files()
  %29 = load i32, i32* @E_FTP_RESULT_OK, align 4
  store i32 %29, i32* %7, align 4
  br label %30

30:                                               ; preds = %27, %22
  br label %31

31:                                               ; preds = %30, %18
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i64 @f_read(i32*, i8*, i64, i32*) #1

declare dso_local i32 @ftp_close_files(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
